# flutter_oboe

./: .gitignore  README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: FullDuplexPass.h  FullDuplexStream.cpp  FullDuplexStream.h  LiveEffectEngine.cpp  LiveEffectEngine.h  c_bridge.cpp  c_port.h
android/app/src/main/kotlin/com/xilev/flutter_oboe/: MainActivity.kt
lib/: flutter_oboe.dart  main.dart
test/: widget_test.dart
